--- a/style.css
+++ b/style.css
@@ -87,25 +87,38 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+   z-index: 0;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); /* Assombrissement ajustable */
+  z-index: 1;
 }
 
 .hero-overlay {
   text-align: center;
   color: white;
   padding: 20px;
-  background: rgba(0, 0, 0, 0.4); /* léger assombrissement */
+  /* background: rgba(0, 0, 0, 0.4);  */
   border-radius: 10px;
+   text-shadow: 1px 1px 2px black;
 }
 
 .hero-overlay h2 {
-  font-size: 20px;
+  font-size: 36px;
   font-weight: 400;
   margin-bottom: 10px;
   letter-spacing: 1px;
 }
 
 .hero-overlay h1 {
-  font-size: 28px;
+  font-size: 36px;
   font-weight: 700;
   letter-spacing: 1px;
 }
@@ -130,16 +143,27 @@ body {
 
 .intro-text .highlight {
   color: #e27628;
-  font-weight: bold;
+  font-weight: 300;
   letter-spacing: 1px;
   margin-bottom: 10px;
   text-transform: uppercase;
+  font-size: 1.2rem;
+ font-family: 'Poppins', Helvetica, Arial, Lucida, sans-serif;
+  
+}
+
+.text-left {
+    text-align: left;
+    margin-top: 1rem;
+    font-family: 'Mulish', Helvetica, Arial, Lucida, sans-serif;
 }
 
 .intro-text h2 {
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 40px;
+  margin-top: 20px;
+  font-family: 'Poppins', Helvetica, Arial, Lucida, sans-serif;
 }
 
 .grid {
@@ -157,7 +181,7 @@ body {
 
 .grid .left img {
   width: 100%;
-  max-width: 400px;
+  max-width: 578px;
   height: auto;
 }
 
@@ -168,19 +192,23 @@ body {
 
 .grid .right .highlight {
   color: #e27628;
-  font-weight: bold;
+  font-weight: 300;
   margin-bottom: 10px;
+  font-size: 1.2rem;
+  font-family: 'Poppins', Helvetica, Arial, Lucida, sans-serif;
 }
 
 .grid .right h3 {
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 29px;
+  font-weight: 400;
   letter-spacing: 1px;
   margin-bottom: 15px;
+  font-family: 'Mulish', Helvetica, Arial, Lucida, sans-serif;
 }
 
 .grid .right p {
   line-height: 1.6;
+  font-family: 'Mulish', Helvetica, Arial, Lucida, sans-serif;
 }
 
 
